# ChangeLog for dev-perl/SQL-Translator
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/SQL-Translator/ChangeLog,v 1.21 2011/10/19 19:26:22 tove Exp $

*SQL-Translator-0.110.100 (19 Oct 2011)

  19 Oct 2011; Torsten Veller <tove@gentoo.org>
  +SQL-Translator-0.110.100.ebuild:
  Version bump

*SQL-Translator-0.110.90 (05 Sep 2011)

  05 Sep 2011; Torsten Veller <tove@gentoo.org>
  +SQL-Translator-0.110.90.ebuild:
  Version bump

  29 Jul 2011; Torsten Veller <tove@gentoo.org>
  -SQL-Translator-0.110.70.ebuild:
  Cleanup

*SQL-Translator-0.110.80 (04 Jun 2011)

  04 Jun 2011; Torsten Veller <tove@gentoo.org>
  +SQL-Translator-0.110.80.ebuild:
  Version bump

  24 Apr 2011; Fabian Groffen <grobian@gentoo.org>
  SQL-Translator-0.110.70.ebuild:
  Marked ~x86-solaris, bug #296509

*SQL-Translator-0.110.70 (26 Feb 2011)

  26 Feb 2011; Torsten Veller <tove@gentoo.org>
  +SQL-Translator-0.110.70.ebuild, -SQL-Translator-0.11007.ebuild:
  Change version scheme. Looks like a downgrade

  14 Jan 2011; Torsten Veller <tove@gentoo.org> -SQL-Translator-0.11006.ebuild:
  Cleanup

*SQL-Translator-0.11007 (03 Dec 2010)

  03 Dec 2010; Torsten Veller <tove@gentoo.org> +SQL-Translator-0.11007.ebuild:
  Version bump

  20 Oct 2010; Torsten Veller <tove@gentoo.org>
  -SQL-Translator-0.11005.ebuild:
  Cleanup

*SQL-Translator-0.11006 (05 Jun 2010)

  05 Jun 2010; Torsten Veller <tove@gentoo.org>
  +SQL-Translator-0.11006.ebuild:
  Version bump

  09 Apr 2010; Torsten Veller <tove@gentoo.org>
  -SQL-Translator-0.11003.ebuild, -SQL-Translator-0.11004.ebuild:
  Cleanup

*SQL-Translator-0.11005 (05 Mar 2010)

  05 Mar 2010; Torsten Veller <tove@gentoo.org>
  +SQL-Translator-0.11005.ebuild:
  Version bump

*SQL-Translator-0.11004 (15 Feb 2010)

  15 Feb 2010; Torsten Veller <tove@gentoo.org>
  +SQL-Translator-0.11004.ebuild:
  Version bump

  12 Oct 2009; Torsten Veller <tove@gentoo.org>
  -SQL-Translator-0.11002.ebuild: