@@ -1,6 +1,11 @@
 # ChangeLog for dev-perl/Statistics-Descriptive
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Statistics-Descriptive/ChangeLog,v 1.33 2012/02/12 19:59:19 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Statistics-Descriptive/ChangeLog,v 1.34 2012/02/18 09:02:27 tove Exp $
+
+  18 Feb 2012; Torsten Veller <tove@gentoo.org>
+  -Statistics-Descriptive-3.20.200.ebuild,
+  -Statistics-Descriptive-3.20.300.ebuild:
+  Cleanup
 
 *Statistics-Descriptive-3.30.0 (12 Feb 2012)
 
