@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/SQL-Translator
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/SQL-Translator/ChangeLog,v 1.21 2011/10/19 19:26:22 tove Exp $
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/SQL-Translator/ChangeLog,v 1.22 2012/02/18 09:04:03 tove Exp $
+
+  18 Feb 2012; Torsten Veller <tove@gentoo.org>
+  -SQL-Translator-0.110.80.ebuild, -SQL-Translator-0.110.90.ebuild:
+  Cleanup
 
 *SQL-Translator-0.110.100 (19 Oct 2011)
 
